  instead of raising (which is still done by py.cmdline.pytest())
  and make it so that py.test.cmdline.main() can be called
  multiple times, at least as far as py.test's internal 
  state is concerned - previously it would raise an exception
  on the second time. 

- improve tracebacks presentation: 
  - raises shows shorter more relevant tracebacks

Changes between 1.2.1 and 1.3.0
==================================================

- deprecate --report option in favour of a new shorter and easier to
  remember -r option: it takes a string argument consisting of any
  combination of 'xfsX' characters.  They relate to the single chars
  you see during the dotted progress printing and will print an extra line 
  per test at the end of the test run.  This extra line indicates the exact
  position or test ID that you directly paste to the py.test cmdline in order
  to re-run a particular test. 

- allow external plugins to register new hooks via the new 
  pytest_addhooks(pluginmanager) hook.  The new release of
  the pytest-xdist plugin for distributed and looponfailing 
  testing requires this feature. 

- add a new pytest_ignore_collect(path, config) hook to allow projects and
  plugins to define exclusion behaviour for their directory structure - 
  for example you may define in a conftest.py this method::

        def pytest_ignore_collect(path):
            return path.check(link=1)

  to prevent even a collection try of any tests in symlinked dirs. 

- new pytest_pycollect_makemodule(path, parent) hook for
  allowing customization of the Module collection object for a 
  matching test module. 

- extend and refine xfail mechanism: 
  ``@py.test.mark.xfail(run=False)`` do not run the decorated test
  ``@py.test.mark.xfail(reason="...")`` prints the reason string in xfail summaries
  specifiying ``--runxfail`` on command line virtually ignores xfail markers

- expose (previously internal) commonly useful methods: 